--- a/html/style.css
+++ b/html/style.css
@@ -8,60 +8,6 @@ body {
     margin: 0;
     padding: 0;
 }
-.login {
-    width: 400px;
-    background-color: #ffffff;
-    box-shadow: 0 0 9px 0 rgba(0, 0, 0, 0.3);
-    margin: 100px auto;
-    border-radius: 20px;
-}
-.login h1 {
-    text-align: center;
-    color: #5b6574;
-    font-size: 24px;
-    padding: 20px 0 20px 0;
-    border-bottom: 1px solid #dee0e4;
-}
-.login form {
-    display: flex;
-    flex-wrap: wrap;
-    justify-content: center;
-    padding-top: 20px;
-}
-.login form label {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    width: 50px;
-    height: 50px;
-    background-color: #3274d6;
-    color: #ffffff;
-}
-.login form input[type="password"], .login form input[type="text"] {
-    width: 310px;
-    height: 50px;
-    border: 1px solid #dee0e4;
-    margin-bottom: 20px;
-    padding: 0 15px;
-}
-.login form input[type="submit"] {
-    width: 100%;
-    padding: 15px;
-   margin-top: 20px;
-    background-color: #3274d6;
-    border: 0;
-    cursor: pointer;
-    font-weight: bold;
-    color: #ffffff;
-    transition: background-color 0.2s;
-}
-.login form input[type="submit"]:hover {
-  background-color: #2868c7;
-    transition: background-color 0.2s;
-}
-body.loggedin {
-	background-color: #f3f4f7;
-}
 .navbar {
     background-color: #333;
     color: #fff;
@@ -203,4 +149,20 @@ footer {
 .content2 > div p {
 	padding: 5px;
 	margin: 0 0 10px 0;
+}
+.button {
+    background-color: #363434;
+    border: 0;
+    color: #ffffff;
+    cursor: pointer;
+    font-weight: bold;
+    padding: 15px;
+    transition: background-color 0.2s;
+    border-radius: 12%;
+}
+.SolliButtons {
+    display: flex;
+    justify-content: center;
+    margin-top: 5.  9%;
+    margin-bottom: 6%;
 }
