--- a/html/style.css
+++ b/html/style.css
@@ -163,6 +163,6 @@ footer {
 .SolliButtons {
     display: flex;
     justify-content: center;
-    margin-top: 5.  9%;
+    margin-top: 5.9%;
     margin-bottom: 6%;
 }
